--- a/full-stack.html
+++ b/full-stack.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='http://moduscreate.applytojob.com/apply/D4MDHVJadr/Senior-Full-Stack-Engineer-ReactJS-JavaScript-Django-Mexico'>Senior Full Stack Engineer (ReactJS, JavaScript, Django) - Mexico - Modus Create, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/D4MDHVJadr/Senior-Full-Stack-Engineer-ReactJS-JavaScript-Django-Mexico'>Senior Full Stack Engineer (ReactJS, JavaScript, Django) - Mexico - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mexico Mexico  Mexico</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/concurrency/117a3b29-0fe7-4cbf-b6ec-136f1255ffc9'>Concurrency - Senior Full Stack Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/concurrency/117a3b29-0fe7-4cbf-b6ec-136f1255ffc9'>Concurrency - Senior Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.prostaff.ch/de/jobs/19145'>Senior JAVA Fullstack Developer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prostaff.ch/de/jobs/19145'>Senior JAVA Fullstack Developer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -164,7 +164,7 @@
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://getaway.join.com/jobs/474002-lead-full-stack-engineer'>Job @ GETAWAY (Berlin): Lead Full Stack Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getaway.join.com/jobs/474002-lead-full-stack-engineer'>Job @ GETAWAY (Berlin): Lead Full Stack Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -196,7 +196,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999698574379-senior-javascript-fullstack-developer-architect'>Jscrambler Senior JavaScript FullStack Developer / Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999698574379-senior-javascript-fullstack-developer-architect'>Jscrambler Senior JavaScript FullStack Developer / Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -288,11 +288,11 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=owDNafwQ&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nOndpMw4'> Plutora Careers - Senior Full Stack .Net Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=owDNafwQ&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nOndpMw4'> Plutora Careers - Senior Full Stack .Net Developer</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -358,7 +358,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sFFZ9gwd&__jvsc=Twitter&bid=nT3XoMwy'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sFFZ9gwd&__jvsc=Twitter&bid=nT3XoMwy'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -386,7 +386,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211106559/JavaScript-Full-Stack-Web-Developer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>JavaScript Full Stack Web Developer | CV-Library.co.uk | 211106559</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211106559/JavaScript-Full-Stack-Web-Developer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>JavaScript Full Stack Web Developer | CV-Library.co.uk | 211106559</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
