--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -244,7 +244,7 @@ Privacy Office based in Cork, Ireland. You would work directly with the European
 responsible for facilitating the development and implementation of a data privacy 
 and?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/babylonhealth/12d360d3-5aaf-40ff-9732-0941db35384a'>Babylon Health - Compliance and Privacy Specialist (part-time)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/babylonhealth/12d360d3-5aaf-40ff-9732-0941db35384a'>Babylon Health - Compliance and Privacy Specialist (part-time)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
@@ -298,7 +298,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/reachire/57ca88ba-f6b2-4cc5-859b-83113340ee7c'>reacHIRE - Fidelity Investments - Privacy Compliance Analyst (Return-to-Work Program)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reachire/57ca88ba-f6b2-4cc5-859b-83113340ee7c'>reacHIRE - Fidelity Investments - Privacy Compliance Analyst (Return-to-Work Program)</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -383,7 +383,7 @@ Prime's privacy program, working closely with privacy team members as well as?..
 <p>Apr 28, 2019 ... Blockchain Cryptographic Research Scientist (London/Paris). Global Services. 
 Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ajmn/job/oulM9fwu'>Al Jazeera Media Network Careers - Senior Privacy Compliance Specialist - Technical</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ajmn/job/oulM9fwu'>Al Jazeera Media Network Careers - Senior Privacy Compliance Specialist - Technical</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-08</p>
 <hr/>
@@ -409,7 +409,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -441,7 +441,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/endurance/jobs/1621589'>Job Application for Privacy Specialist at Endurance International Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/endurance/jobs/1621589'>Job Application for Privacy Specialist at Endurance International Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-27</p>
 <hr/>
