--- a/ux.html
+++ b/ux.html
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://deinestudienfinanzierung.join.com/jobs/467920-ui-ux-designer-m-w-d'>Job @ deineStudienfinanzierung (Berlin): UI/ UX De... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deinestudienfinanzierung.join.com/jobs/467920-ui-ux-designer-m-w-d'>Job @ deineStudienfinanzierung (Berlin): UI/ UX De... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -173,7 +173,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/derivesystems/job/ocdl9fwD'>Derive Systems Careers - Sr. User Experience (UX) Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/derivesystems/job/ocdl9fwD'>Derive Systems Careers - Sr. User Experience (UX) Designer</a></h5> 
 <p><span class="badge badge-light">Broomfield, Colorado</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -283,7 +283,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1454/3'>Senior UX Designer Automotive Job, Frankfurt area, Germany | Technicon Design</a></h5> 
+<h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1454/3'>Senior UX Designer Automotive Job, Frankfurt area, Germany | Technicon Design</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -339,7 +339,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/wehkamp/743999698452304-ux-copywriter'>wehkamp UX Copywriter | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/wehkamp/743999698452304-ux-copywriter'>wehkamp UX Copywriter | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -351,7 +351,7 @@
 <p><span class="badge badge-light">San Francisco, California  San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932391'>Job Application for Sr. Web UX Designer at Traeger Wood Pellet Grills</a></h5> 
+<h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932391'>Job Application for Sr. Web UX Designer at Traeger Wood Pellet Grills</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -401,7 +401,7 @@
 <p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://abcfinlab.join.com/jobs/449272-senior-ux-designer-m-w-x'>Job @ abcfinlab (Cologne): Senior UX Designer (m/w/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abcfinlab.join.com/jobs/449272-senior-ux-designer-m-w-x'>Job @ abcfinlab (Cologne): Senior UX Designer (m/w/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -425,7 +425,7 @@
 <p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
       Senior UX Designer at Primer - San Francisco, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
